--- a/index.html
+++ b/index.html
@@ -3,180 +3,146 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-  <title>Quantum Vault – Lounge</title>
-  <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@500;700&display=swap" rel="stylesheet">
+  <title>Quantum Vault – Home</title>
+  <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@500;700&display=swap" rel="stylesheet" />
   <script src="https://cdn.jsdelivr.net/npm/ethers@5.7.2/dist/ethers.umd.min.js"></script>
   <style>
-    * { margin: 0; padding: 0; box-sizing: border-box; font-family: 'Space Grotesk', sans-serif; }
-    body {
-      background: #000;
-      color: #fff;
-      overflow-x: hidden;
-      padding: 16px;
-      text-align: center;
+    :root {
+      --bg: #000; --text: #fff; --accent: #00ffe1;
+      --panel: rgba(255,255,255,0.03);
+      --border: rgba(255,255,255,0.08);
     }
-    .container {
-      max-width: 600px;
-      margin: auto;
-      padding-bottom: 100px;
+    * {
+      margin: 0; padding: 0; box-sizing: border-box;
+      font-family: 'Space Grotesk', sans-serif;
+    }
+    body {
+      background: var(--bg); color: var(--text);
+      overflow-x: hidden; padding: 0;
+    }
+    header {
+      display: flex; justify-content: space-between;
+      align-items: center; padding: 16px;
+      border-bottom: 1px solid var(--border);
+      background: #000;
+    }
+    .logo {
+      font-size: 18px; font-weight: bold;
+      color: var(--accent);
+    }
+    .hamburger {
+      width: 26px; height: 18px;
+      position: relative; cursor: pointer;
+    }
+    .hamburger span {
+      position: absolute; height: 2px; width: 100%;
+      background: #fff; left: 0;
+      transition: 0.3s ease;
+    }
+    .hamburger span:nth-child(1) { top: 0; }
+    .hamburger span:nth-child(2) { top: 8px; }
+    .hamburger span:nth-child(3) { top: 16px; }
+    .sidebar {
+      position: fixed; top: 0; left: -240px;
+      width: 240px; height: 100%;
+      background: #111; border-right: 1px solid var(--border);
+      padding: 24px; transition: left 0.3s ease;
+      z-index: 999;
+    }
+    .sidebar.active { left: 0; }
+    .sidebar a {
+      display: block; color: var(--accent);
+      margin: 16px 0; text-decoration: none;
+      font-size: 15px;
+    }
+    .main {
+      padding: 16px;
     }
     .section {
-      background: rgba(255,255,255,0.03);
-      border: 1px solid rgba(255,255,255,0.08);
-      border-radius: 18px;
-      padding: 24px;
+      background: var(--panel);
+      border: 1px solid var(--border);
+      border-radius: 16px;
+      padding: 20px;
       margin-bottom: 20px;
-      backdrop-filter: blur(14px);
+      backdrop-filter: blur(10px);
     }
     .title {
-      font-size: 20px;
-      color: #00ffe1;
-      margin-bottom: 12px;
+      font-size: 18px; color: var(--accent);
+      margin-bottom: 10px;
     }
-    .wallet {
-      font-size: 13px;
-      color: #aaa;
+    .wallet-info {
+      font-size: 14px; color: #aaa;
       margin-bottom: 8px;
-      word-break: break-word;
+    }
+    .balance-badges {
+      display: flex; gap: 10px; flex-wrap: wrap;
+      justify-content: center; margin-top: 10px;
     }
     .badge {
-      display: inline-block;
-      background: #00ffe1;
-      color: #000;
-      padding: 4px 10px;
-      font-size: 12px;
-      border-radius: 6px;
-      margin: 6px 4px;
+      background: var(--accent);
+      color: #000; padding: 6px 14px;
+      font-size: 13px; border-radius: 20px;
       font-weight: bold;
-    }
-    .carousel {
-      display: flex;
-      overflow-x: auto;
-      gap: 12px;
-      scroll-snap-type: x mandatory;
-      padding: 10px 0;
-    }
-    .carousel::-webkit-scrollbar { display: none; }
-    .carousel-item {
-      flex: 0 0 auto;
-      scroll-snap-align: start;
-      background: #111;
-      border: 1px solid rgba(255,255,255,0.08);
-      border-radius: 14px;
-      padding: 14px;
-      width: 160px;
-      text-align: center;
-    }
-    .carousel-item img {
-      width: 50px;
-      height: 50px;
-      object-fit: contain;
-      margin-bottom: 8px;
-    }
-    .carousel-item p {
-      font-size: 13px;
-      color: #ccc;
-    }
-    .share-btn {
-      margin-top: 12px;
-      background: #111;
-      color: #00ffe1;
-      padding: 8px 14px;
-      border: 1px solid #00ffe140;
-      border-radius: 10px;
-      font-size: 13px;
-      cursor: pointer;
-    }
-    .share-btn:hover { background: #181818; }
-    .chat-box {
-      max-height: 300px;
-      overflow-y: auto;
-      text-align: left;
-      padding-right: 8px;
-      margin-bottom: 12px;
-    }
-    .chat-message {
-      background: #111;
-      border: 1px solid rgba(255,255,255,0.05);
-      border-radius: 10px;
-      padding: 8px 12px;
-      margin-bottom: 6px;
-      font-size: 13px;
-    }
-    .chat-message .name {
-      color: #00ffe1;
-      font-weight: bold;
-      margin-bottom: 2px;
-    }
-    .chat-input {
-      display: flex;
-      gap: 8px;
-      align-items: center;
-    }
-    .chat-input input {
-      flex: 1;
-      background: #111;
-      border: 1px solid rgba(255,255,255,0.1);
-      border-radius: 10px;
-      color: #fff;
-      padding: 8px 12px;
-      font-size: 14px;
-    }
-    .chat-input button {
-      background: #00ffe1;
-      color: #000;
-      border: none;
-      border-radius: 10px;
-      padding: 8px 14px;
-      font-weight: bold;
-      cursor: pointer;
     }
   </style>
 </head>
 <body>
-  <div class="container">
+  <div class="sidebar" id="sidebar">
+    <a href="#">Home</a>
+    <a href="#">Games</a>
+    <a href="#">Leaderboard</a>
+    <a href="#">Partners</a>
+    <a href="#">Profile</a>
+  </div>
+
+  <header>
+    <div class="logo">Quantum Vault</div>
+    <div class="hamburger" onclick="toggleSidebar()">
+      <span></span><span></span><span></span>
+    </div>
+  </header>
+
+  <div class="main">
     <div class="section">
-      <div class="title">Welcome to the Quantum Lounge</div>
-      <div id="walletDisplay" class="wallet">Connecting...</div>
-      <div class="badge" id="balanceBadge">Y2K Winnings: 0</div>
+      <div class="title">Welcome Back</div>
+      <div id="walletDisplay" class="wallet-info">Connecting wallet...</div>
+      <div class="balance-badges">
+        <div id="y2kBalance" class="badge">Y2K: 0</div>
+        <div id="croBalance" class="badge">CRO: 0</div>
+      </div>
+    </div>
+
+    <div class="section">
+      <div class="title">Latest Announcement</div>
+      <div id="announcementBox">Loading...</div>
     </div>
 
     <div class="section">
       <div class="title">MVP Spotlight</div>
-      <div id="mvpUser">@mvpUser</div>
-      <div class="wallet" id="mvpEarnings">0 Y2K Earned</div>
+      <div id="mvpUser">@unknown</div>
+      <div class="wallet-info" id="mvpEarnings">0 Y2K Earned</div>
     </div>
 
-    <div class="section">
+        <div class="section">
       <div class="title">New Players (Last 48h)</div>
       <div id="newPlayers">Loading...</div>
     </div>
 
     <div class="section">
-      <div class="title">Vault Hangout</div>
-      <div class="chat-box" id="chatBox"></div>
-      <div class="chat-input">
-        <input id="chatInput" type="text" placeholder="Say something cool..." />
-        <button onclick="sendMessage()">Send</button>
-      </div>
-    </div>
-
-        <div class="section">
       <div class="title">Partner Projects</div>
-      <div class="carousel" id="partnerCarousel"></div>
+      <div id="partnerBox" style="margin-top:10px;"></div>
     </div>
 
     <div class="section">
-      <div class="title">Share Your Profile</div>
-      <button class="share-btn" id="shareBtn">Post to 𝕏</button>
+      <div class="title">Share Your Vault</div>
+      <button onclick="shareToX()" style="margin-top:10px;padding:10px 20px;background:#00ffe1;color:#000;border:none;border-radius:8px;font-weight:bold;">Post to 𝕏</button>
     </div>
   </div>
 
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-app.js";
     import {
-      getFirestore, doc, getDoc, collection, getDocs, addDoc, query,
-      orderBy, limit, where, onSnapshot, serverTimestamp
+      getFirestore, doc, getDoc, collection, getDocs, query, orderBy, limit, where
     } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-firestore.js";
 
     const firebaseConfig = {
@@ -190,123 +156,108 @@
 
     const app = initializeApp(firebaseConfig);
     const db = getFirestore(app);
-    let currentWallet = "";
 
-    async function connectWalletAndLoadData() {
+    const y2kAddress = "0xB4Df7d2A736Cc391146bB0dF4277E8F68247Ac6d";
+
+    async function connectWalletAndFetch() {
       const provider = new ethers.providers.Web3Provider(window.ethereum);
       await provider.send("eth_requestAccounts", []);
       const signer = provider.getSigner();
-      currentWallet = (await signer.getAddress()).toLowerCase();
+      const wallet = (await signer.getAddress()).toLowerCase();
 
-      document.getElementById("walletDisplay").textContent =
-        currentWallet.slice(0, 6) + "..." + currentWallet.slice(-4);
+      document.getElementById("walletDisplay").textContent = wallet.slice(0, 6) + "..." + wallet.slice(-4);
 
-      const docRef = doc(db, "users", currentWallet);
-      const snap = await getDoc(docRef);
-      const y2k = snap.exists() ? (snap.data().earnings || 0) : 0;
+      const y2kContract = new ethers.Contract(y2kAddress, ["function balanceOf(address) view returns (uint256)"], provider);
+      const y2kRaw = await y2kContract.balanceOf(wallet);
+      const y2k = parseFloat(ethers.utils.formatUnits(y2kRaw, 18)).toFixed(2);
+      document.getElementById("y2kBalance").textContent = `Y2K: ${y2k}`;
 
-      document.getElementById("balanceBadge").textContent = `Y2K Winnings: ${y2k}`;
+      const cro = await provider.getBalance(wallet);
+      const croVal = parseFloat(ethers.utils.formatEther(cro)).toFixed(2);
+      document.getElementById("croBalance").textContent = `CRO: ${croVal}`;
     }
 
     async function loadMVP() {
-      const usersRef = collection(db, "users");
-      const topEarnerQuery = query(usersRef, orderBy("earnings", "desc"), limit(1));
-      const topSnap = await getDocs(topEarnerQuery);
-      if (!topSnap.empty) {
-        const top = topSnap.docs[0].data();
-        const name = top.username || "anon";
-        const earn = top.earnings || 0;
-        document.getElementById("mvpUser").textContent = "@" + name;
-        document.getElementById("mvpEarnings").textContent = earn + " Y2K Earned";
+      const topQuery = query(collection(db, "users"), orderBy("earnings", "desc"), limit(1));
+      const snap = await getDocs(topQuery);
+      if (!snap.empty) {
+        const data = snap.docs[0].data();
+        document.getElementById("mvpUser").textContent = "@" + (data.username || "unknown");
+        document.getElementById("mvpEarnings").textContent = `${data.earnings || 0} Y2K Earned`;
+      }
+    }
+
+    async function loadAnnouncement() {
+      const ref = doc(db, "meta", "announcement");
+      const snap = await getDoc(ref);
+      if (snap.exists()) {
+        document.getElementById("announcementBox").textContent = snap.data().text || "No announcement yet.";
+      } else {
+        document.getElementById("announcementBox").textContent = "No announcement yet.";
       }
     }
 
     async function loadNewPlayers() {
-      const cutoff = Date.now() - (48 * 60 * 60 * 1000); // 48 hours
+      const cutoff = Date.now() - 48 * 60 * 60 * 1000;
       const q = query(collection(db, "users"), where("createdAt", ">", cutoff));
       const snap = await getDocs(q);
       const container = document.getElementById("newPlayers");
       if (snap.empty) {
-        container.textContent = "No new users yet.";
+        container.innerHTML = "<div style='color:#888;'>No new members yet.</div>";
         return;
       }
       container.innerHTML = "";
       snap.forEach(doc => {
-        const data = doc.data();
-        const name = data.username || "anon";
-        container.innerHTML += `<div class="badge">@${name}</div>`;
+        const u = doc.data();
+        const tag = document.createElement("div");
+        tag.className = "badge";
+        tag.textContent = "@" + (u.username || "unknown");
+        container.appendChild(tag);
       });
     }
 
-    async function loadPartners() {
-      const partners = [
-        { name: "DOJO", logo: "https://i.imgur.com/CUZcb5O.png", link: "https://twitter.com/CRODOJO" },
-        { name: "CroFighter", logo: "https://i.imgur.com/7gNV9od.png", link: "https://twitter.com/crofighter" },
-        { name: "Cards of Cronos", logo: "https://i.imgur.com/o1bHvXN.png", link: "https://twitter.com/CardsofCronos" }
-      ];
-      const container = document.getElementById("partnerCarousel");
-      partners.forEach(partner => {
-        const el = document.createElement("div");
-        el.className = "carousel-item";
-        el.innerHTML = `
-          <a href="${partner.link}" target="_blank">
-            <img src="${partner.logo}" alt="${partner.name}" />
-            <p>${partner.name}</p>
-          </a>`;
-        container.appendChild(el);
-      });
-    }
-
-    async function sendMessage() {
-      const input = document.getElementById("chatInput");
-      const text = input.value.trim();
-      if (!text || !currentWallet) return;
-      await addDoc(collection(db, "chat"), {
-        text,
-        createdAt: serverTimestamp(),
-        uid: currentWallet,
-        username: currentWallet.slice(2, 6)
-      });
-      input.value = "";
-    }
-
-    function listenToChat() {
-      const q = query(collection(db, "chat"), orderBy("createdAt", "desc"), limit(25));
-      onSnapshot(q, snap => {
-        const box = document.getElementById("chatBox");
-        box.innerHTML = "";
-        snap.docs.reverse().forEach(doc => {
-          const data = doc.data();
-          const msg = document.createElement("div");
-          msg.className = "chat-message";
-          msg.innerHTML = `<div class="name">@${data.username}</div><div>${data.text}</div>`;
-          box.appendChild(msg);
-        });
-        box.scrollTop = box.scrollHeight;
-      });
+    function toggleSidebar() {
+      document.getElementById("sidebar").classList.toggle("active");
     }
 
     function shareToX() {
       const messages = [
-        "Just stepped into the Quantum Vault — where legends are minted. #CROFAM #Puushfuncronos",
-        "This ain’t your average DApp. Welcome to the gambling multiverse. #CROFAM #Puushfuncronos",
-        "Built different. Vaulted forever. #QuantumVault #CROFAM #Puushfuncronos",
-        "What happens in the Vault... gets burned in Y2K. #CROFAM #Puushfuncronos",
-        "Stacking wins and spotlight. Welcome to the Vault. #CROFAM #Puushfuncronos",
-        "The vault ain't just for coins — it's for history. #CROFAM #Puushfuncronos"
+        "Just entered the Quantum Vault — and I’m not leaving empty-handed. #CROFAM #Puushfuncronos",
+        "This is your sign to try quantum gambling. I just joined the Vault. #CROFAM #Puushfuncronos",
+        "A vault like no other. Risk is the real flex. #QuantumVault #CROFAM #Puushfuncronos",
+        "Logged in, locked in, let the draws begin. #CROFAM #Puushfuncronos"
       ];
       const msg = encodeURIComponent(messages[Math.floor(Math.random() * messages.length)]);
       const url = encodeURIComponent("https://quantum-vault-y2kxroast.netlify.app/");
       window.open(`https://twitter.com/intent/tweet?text=${msg}&url=${url}`, "_blank");
     }
 
-    window.sendMessage = sendMessage;
-    document.getElementById("shareBtn").addEventListener("click", shareToX);
-    connectWalletAndLoadData();
+    connectWalletAndFetch();
     loadMVP();
+    loadAnnouncement();
     loadNewPlayers();
+
+        async function loadPartners() {
+      const partners = [
+        { name: "DOJO", logo: "https://i.imgur.com/CUZcb5O.png", link: "https://twitter.com/CRODOJO" },
+        { name: "CroFighter", logo: "https://i.imgur.com/7gNV9od.png", link: "https://twitter.com/crofighter" },
+        { name: "Cards of Cronos", logo: "https://i.imgur.com/o1bHvXN.png", link: "https://twitter.com/CardsofCronos" }
+      ];
+      const container = document.getElementById("partnerBox");
+      partners.forEach(p => {
+        const el = document.createElement("div");
+        el.style.margin = "8px";
+        el.innerHTML = `
+          <a href="${p.link}" target="_blank" style="text-decoration:none;">
+            <img src="${p.logo}" alt="${p.name}" style="width:40px;height:40px;border-radius:8px;margin-bottom:4px;" /><br/>
+            <span style="color:#ccc;font-size:13px;">${p.name}</span>
+          </a>
+        `;
+        container.appendChild(el);
+      });
+    }
+
     loadPartners();
-    listenToChat();
   </script>
 </body>
 </html>
