--- a/index.html
+++ b/index.html
@@ -2,152 +2,118 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-  <title>Quantum Vault – Home</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Quantum Vault Lounge</title>
   <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@500;700&display=swap" rel="stylesheet" />
   <script src="https://cdn.jsdelivr.net/npm/ethers@5.7.2/dist/ethers.umd.min.js"></script>
   <style>
-    :root {
-      --bg: #000; --text: #fff; --accent: #00ffe1;
-      --panel: rgba(255,255,255,0.03);
-      --border: rgba(255,255,255,0.08);
-    }
-    * {
-      margin: 0; padding: 0; box-sizing: border-box;
-      font-family: 'Space Grotesk', sans-serif;
-    }
     body {
-      background: var(--bg); color: var(--text);
-      overflow-x: hidden; padding: 0;
-    }
-    header {
-      display: flex; justify-content: space-between;
-      align-items: center; padding: 16px;
-      border-bottom: 1px solid var(--border);
-      background: #000;
-    }
-    .logo {
-      font-size: 18px; font-weight: bold;
-      color: var(--accent);
-    }
-    .hamburger {
-      width: 26px; height: 18px;
-      position: relative; cursor: pointer;
-    }
-    .hamburger span {
-      position: absolute; height: 2px; width: 100%;
-      background: #fff; left: 0;
-      transition: 0.3s ease;
-    }
-    .hamburger span:nth-child(1) { top: 0; }
-    .hamburger span:nth-child(2) { top: 8px; }
-    .hamburger span:nth-child(3) { top: 16px; }
-    .sidebar {
-      position: fixed; top: 0; left: -240px;
-      width: 240px; height: 100%;
-      background: #111; border-right: 1px solid var(--border);
-      padding: 24px; transition: left 0.3s ease;
-      z-index: 999;
-    }
-    .sidebar.active { left: 0; }
-    .sidebar a {
-      display: block; color: var(--accent);
-      margin: 16px 0; text-decoration: none;
-      font-size: 15px;
-    }
-    .main {
-      padding: 16px;
-    }
-    .section {
-      background: var(--panel);
-      border: 1px solid var(--border);
-      border-radius: 16px;
-      padding: 20px;
-      margin-bottom: 20px;
-      backdrop-filter: blur(10px);
-    }
-    .title {
-      font-size: 18px; color: var(--accent);
-      margin-bottom: 10px;
-    }
-    .wallet-info {
-      font-size: 14px; color: #aaa;
-      margin-bottom: 8px;
-    }
-    .balance-badges {
-      display: flex; gap: 10px; flex-wrap: wrap;
-      justify-content: center; margin-top: 10px;
-    }
-    .badge {
-      background: var(--accent);
-      color: #000; padding: 6px 14px;
-      font-size: 13px; border-radius: 20px;
-      font-weight: bold;
+      margin: 0;
+      font-family: 'Space Grotesk', sans-serif;
+      background: linear-gradient(160deg, #0f0f0f, #1a1a1a);
+      color: #fff;
+      padding: 24px;
     }
     .player-badge {
-  display: flex;
-  align-items: center;
-  gap: 16px;
-  background: rgba(255,255,255,0.03);
-  border: 1px solid rgba(255,255,255,0.08);
-  border-radius: 16px;
-  padding: 16px;
-  margin-bottom: 20px;
-  backdrop-filter: blur(10px);
-  cursor: pointer;
-}
-.player-badge:hover {
-  background: rgba(255,255,255,0.05);
-}
-.player-badge img {
-  width: 60px;
-  height: 60px;
-  border-radius: 50%;
-  border: 2px solid #00ffe1;
-  object-fit: cover;
-}
-.badge-info {
-  text-align: left;
-}
-.nickname {
-  font-weight: bold;
-  font-size: 16px;
-  color: #00ffe1;
-}
-.handle {
-  font-size: 13px;
-  color: #ccc;
-}
-.badge-stats {
-  font-size: 12px;
-  margin-top: 6px;
-  color: #aaa;
-  display: flex;
-  gap: 10px;
-}
+      display: flex;
+      align-items: center;
+      background: rgba(255,255,255,0.04);
+      border: 2px solid #00ffe1;
+      border-radius: 14px;
+      padding: 12px 16px;
+      margin-bottom: 20px;
+      max-width: 420px;
+      cursor: pointer;
+      box-shadow: 0 0 12px rgba(0,255,225,0.2);
+    }
+    .player-badge img {
+      width: 60px;
+      height: 60px;
+      border-radius: 50%;
+      margin-right: 16px;
+      border: 3px solid var(--rim-color, #00ffe1);
+    }
+    .badge-info .nickname {
+      font-size: 16px;
+      font-weight: bold;
+      color: #00ffe1;
+    }
+    .badge-info .handle {
+      font-size: 13px;
+      color: #999;
+    }
+    .badge-stats {
+      font-size: 12px;
+      color: #ccc;
+      margin-top: 4px;
+    }
+    .badge-stats span {
+      margin-right: 12px;
+    }
+    .modal-overlay {
+      position: fixed;
+      inset: 0;
+      background: rgba(0, 0, 0, 0.85);
+      display: none;
+      align-items: center;
+      justify-content: center;
+      z-index: 1000;
+    }
+    .modal-content {
+      background: #111;
+      padding: 24px;
+      border-radius: 16px;
+      width: 95%;
+      max-width: 420px;
+      color: #fff;
+      border: 1px solid rgba(255,255,255,0.08);
+      box-shadow: 0 0 18px rgba(0,255,225,0.2);
+    }
+    .modal-content h2 {
+      font-size: 18px;
+      color: #00ffe1;
+      margin-bottom: 16px;
+    }
+    .modal-content label {
+      font-size: 13px;
+      display: block;
+      margin-top: 12px;
+      margin-bottom: 4px;
+    }
+    .modal-content input {
+      width: 100%;
+      padding: 8px;
+      border-radius: 8px;
+      border: 1px solid #333;
+      background: #000;
+      color: #00ffe1;
+      font-size: 13px;
+    }
+    .modal-content input[type="color"] {
+      padding: 4px;
+      height: 42px;
+    }
+    .modal-content button {
+      margin-top: 18px;
+      padding: 10px 16px;
+      border-radius: 10px;
+      font-weight: bold;
+      border: none;
+      cursor: pointer;
+    }
+    .save-btn {
+      background: #00ffe1;
+      color: #000;
+      margin-right: 8px;
+    }
+    .close-btn {
+      background: #222;
+      color: #ccc;
+    }
   </style>
 </head>
 <body>
-  <div class="sidebar" id="sidebar">
-    <a href="#">Home</a>
-    <a href="#">Games</a>
-    <a href="#">Leaderboard</a>
-    <a href="#">Partners</a>
-    <a href="#">Profile</a>
-  </div>
-
-  <header>
-    <div class="logo">Quantum Vault</div>
-    <div class="hamburger" onclick="toggleSidebar()">
-      <span></span><span></span><span></span>
-    </div>
-  </header>
-
-  <div class="main">
-    <div class="section">
-      <div class="title">Welcome Back</div>
-      <div id="walletDisplay" class="wallet-info">Connecting wallet...</div>
-      <div class="player-badge" id="playerBadge">
+<div class="player-badge" id="playerBadge">
   <img id="badgePFP" src="https://api.dicebear.com/6.x/pixel-art/svg?seed=anon" alt="PFP" />
   <div class="badge-info">
     <div class="nickname" id="badgeNickname">@anon</div>
@@ -159,158 +125,110 @@
     </div>
   </div>
 </div>
-      <div class="balance-badges">
-        <div id="y2kBalance" class="badge">Y2K: 0</div>
-        <div id="croBalance" class="badge">CRO: 0</div>
-      </div>
-    </div>
 
-    <div class="section">
-      <div class="title">Latest Announcement</div>
-      <div id="announcementBox">Loading...</div>
-    </div>
-
-    <div class="section">
-      <div class="title">MVP Spotlight</div>
-      <div id="mvpUser">@unknown</div>
-      <div class="wallet-info" id="mvpEarnings">0 Y2K Earned</div>
-    </div>
-
-        <div class="section">
-      <div class="title">New Players (Last 48h)</div>
-      <div id="newPlayers">Loading...</div>
-    </div>
-
-    <div class="section">
-      <div class="title">Partner Projects</div>
-      <div id="partnerBox" style="margin-top:10px;"></div>
-    </div>
-
-    <div class="section">
-      <div class="title">Share Your Vault</div>
-      <button onclick="shareToX()" style="margin-top:10px;padding:10px 20px;background:#00ffe1;color:#000;border:none;border-radius:8px;font-weight:bold;">Post to 𝕏</button>
-    </div>
+<div class="modal-overlay" id="editModal">
+  <div class="modal-content">
+    <h2>Edit Player Badge</h2>
+    <label for="editNickname">Nickname</label>
+    <input type="text" id="editNickname" />
+    <label for="editHandle">𝕏 Handle</label>
+    <input type="text" id="editHandle" />
+    <label for="editColor">Badge Rim Color</label>
+    <input type="color" id="editColor" />
+    <button class="save-btn" id="saveBadgeBtn">Save</button>
+    <button class="close-btn" onclick="document.getElementById('editModal').style.display='none'">Cancel</button>
   </div>
+</div>
 
   <script type="module">
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-app.js";
-    import {
-      getFirestore, doc, getDoc, collection, getDocs, query, orderBy, limit, where
-    } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-firestore.js";
+import { initializeApp } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-app.js";
+import {
+  getFirestore, doc, getDoc, setDoc
+} from "https://www.gstatic.com/firebasejs/10.11.0/firebase-firestore.js";
 
-    const firebaseConfig = {
-      apiKey: "AIzaSyCJwqDFZtf1PkZwAalOaf2_7eWtej5HIfA",
-      authDomain: "y2k-arcade.firebaseapp.com",
-      projectId: "y2k-arcade",
-      storageBucket: "y2k-arcade.appspot.com",
-      messagingSenderId: "1063043176357",
-      appId: "1:1063043176357:web:20bc22e9cbf269ff40fa4c"
+const firebaseConfig = {
+  apiKey: "AIzaSyCJwqDFZtf1PkZwAalOaf2_7eWtej5HIfA",
+  authDomain: "y2k-arcade.firebaseapp.com",
+  projectId: "y2k-arcade",
+  storageBucket: "y2k-arcade.appspot.com",
+  messagingSenderId: "1063043176357",
+  appId: "1:1063043176357:web:20bc22e9cbf269ff40fa4c"
+};
+
+const app = initializeApp(firebaseConfig);
+const db = getFirestore(app);
+
+let currentWallet = "";
+let profileData = {};
+
+async function loadPlayerBadge() {
+  if (!window.ethereum) return alert("Install MetaMask");
+
+  const provider = new ethers.providers.Web3Provider(window.ethereum);
+  await provider.send("eth_requestAccounts", []);
+  const signer = provider.getSigner();
+  const address = await signer.getAddress();
+  currentWallet = address.toLowerCase();
+
+  const ref = doc(db, "users", currentWallet);
+  const snap = await getDoc(ref);
+
+  if (!snap.exists()) return;
+
+  profileData = snap.data();
+
+  const { username, xHandle, pfpUrl, earnings = 0, games = 0, wins = 0, rimColor = "#00ffe1" } = profileData;
+
+  document.getElementById("badgeNickname").textContent = `@${username || "anon"}`;
+  document.getElementById("badgeHandle").textContent = xHandle ? `@${xHandle}` : "";
+  document.getElementById("badgePFP").src = pfpUrl || "https://api.dicebear.com/6.x/pixel-art/svg?seed=anon";
+  document.getElementById("badgeGames").textContent = `Games: ${games}`;
+  document.getElementById("badgeWins").textContent = `Wins: ${wins}`;
+  document.getElementById("badgeY2K").textContent = `Y2K: ${earnings}`;
+  document.documentElement.style.setProperty('--rim-color', rimColor || "#00ffe1");
+}
+
+// Show modal and preload
+document.getElementById("playerBadge").addEventListener("click", () => {
+  document.getElementById("editNickname").value = profileData.username || "";
+  document.getElementById("editHandle").value = profileData.xHandle || "";
+  document.getElementById("editColor").value = profileData.rimColor || "#00ffe1";
+  document.getElementById("editModal").style.display = "flex";
+});
+</script>
+
+  <script type="module">
+  import { setDoc, doc } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-firestore.js";
+  import { getFirestore } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-firestore.js";
+
+  const db = getFirestore();
+
+  document.getElementById("saveChangesBtn").addEventListener("click", async () => {
+    const newNickname = document.getElementById("editNickname").value.trim();
+    const newHandle = document.getElementById("editHandle").value.trim();
+    const newColor = document.getElementById("editColor").value;
+
+    if (!currentWallet || !newNickname || !newColor) return alert("Nickname and color required.");
+
+    const update = {
+      username: newNickname,
+      xHandle: newHandle,
+      rimColor: newColor
     };
 
-    const app = initializeApp(firebaseConfig);
-    const db = getFirestore(app);
+    await setDoc(doc(db, "users", currentWallet), update, { merge: true });
 
-    const y2kAddress = "0xB4Df7d2A736Cc391146bB0dF4277E8F68247Ac6d";
+    document.getElementById("editModal").style.display = "none";
+    location.reload();
+  });
 
-    async function connectWalletAndFetch() {
-      const provider = new ethers.providers.Web3Provider(window.ethereum);
-      await provider.send("eth_requestAccounts", []);
-      const signer = provider.getSigner();
-      const wallet = (await signer.getAddress()).toLowerCase();
+  document.getElementById("cancelEditBtn").addEventListener("click", () => {
+    document.getElementById("editModal").style.display = "none";
+  });
 
-      document.getElementById("walletDisplay").textContent = wallet.slice(0, 6) + "..." + wallet.slice(-4);
+  // Auto load badge on page load
+  loadPlayerBadge();
+</script>
 
-      const y2kContract = new ethers.Contract(y2kAddress, ["function balanceOf(address) view returns (uint256)"], provider);
-      const y2kRaw = await y2kContract.balanceOf(wallet);
-      const y2k = parseFloat(ethers.utils.formatUnits(y2kRaw, 18)).toFixed(2);
-      document.getElementById("y2kBalance").textContent = `Y2K: ${y2k}`;
-
-      const cro = await provider.getBalance(wallet);
-      const croVal = parseFloat(ethers.utils.formatEther(cro)).toFixed(2);
-      document.getElementById("croBalance").textContent = `CRO: ${croVal}`;
-    }
-
-    async function loadMVP() {
-      const topQuery = query(collection(db, "users"), orderBy("earnings", "desc"), limit(1));
-      const snap = await getDocs(topQuery);
-      if (!snap.empty) {
-        const data = snap.docs[0].data();
-        document.getElementById("mvpUser").textContent = "@" + (data.username || "unknown");
-        document.getElementById("mvpEarnings").textContent = `${data.earnings || 0} Y2K Earned`;
-      }
-    }
-
-    async function loadAnnouncement() {
-      const ref = doc(db, "meta", "announcement");
-      const snap = await getDoc(ref);
-      if (snap.exists()) {
-        document.getElementById("announcementBox").textContent = snap.data().text || "No announcement yet.";
-      } else {
-        document.getElementById("announcementBox").textContent = "No announcement yet.";
-      }
-    }
-
-    async function loadNewPlayers() {
-      const cutoff = Date.now() - 48 * 60 * 60 * 1000;
-      const q = query(collection(db, "users"), where("createdAt", ">", cutoff));
-      const snap = await getDocs(q);
-      const container = document.getElementById("newPlayers");
-      if (snap.empty) {
-        container.innerHTML = "<div style='color:#888;'>No new members yet.</div>";
-        return;
-      }
-      container.innerHTML = "";
-      snap.forEach(doc => {
-        const u = doc.data();
-        const tag = document.createElement("div");
-        tag.className = "badge";
-        tag.textContent = "@" + (u.username || "unknown");
-        container.appendChild(tag);
-      });
-    }
-
-    function toggleSidebar() {
-      document.getElementById("sidebar").classList.toggle("active");
-    }
-
-    function shareToX() {
-      const messages = [
-        "Just entered the Quantum Vault — and I’m not leaving empty-handed. #CROFAM #Puushfuncronos",
-        "This is your sign to try quantum gambling. I just joined the Vault. #CROFAM #Puushfuncronos",
-        "A vault like no other. Risk is the real flex. #QuantumVault #CROFAM #Puushfuncronos",
-        "Logged in, locked in, let the draws begin. #CROFAM #Puushfuncronos"
-      ];
-      const msg = encodeURIComponent(messages[Math.floor(Math.random() * messages.length)]);
-      const url = encodeURIComponent("https://quantum-vault-y2kxroast.netlify.app/");
-      window.open(`https://twitter.com/intent/tweet?text=${msg}&url=${url}`, "_blank");
-    }
-
-    connectWalletAndFetch();
-    loadMVP();
-    loadAnnouncement();
-    loadNewPlayers();
-
-        async function loadPartners() {
-      const partners = [
-        { name: "DOJO", logo: "https://i.imgur.com/CUZcb5O.png", link: "https://twitter.com/CRODOJO" },
-        { name: "CroFighter", logo: "https://i.imgur.com/7gNV9od.png", link: "https://twitter.com/crofighter" },
-        { name: "Cards of Cronos", logo: "https://i.imgur.com/o1bHvXN.png", link: "https://twitter.com/CardsofCronos" }
-      ];
-      const container = document.getElementById("partnerBox");
-      partners.forEach(p => {
-        const el = document.createElement("div");
-        el.style.margin = "8px";
-        el.innerHTML = `
-          <a href="${p.link}" target="_blank" style="text-decoration:none;">
-            <img src="${p.logo}" alt="${p.name}" style="width:40px;height:40px;border-radius:8px;margin-bottom:4px;" /><br/>
-            <span style="color:#ccc;font-size:13px;">${p.name}</span>
-          </a>
-        `;
-        container.appendChild(el);
-      });
-    }
-
-    loadPartners();
-  </script>
 </body>
 </html>
